--- a/templates/admin/editarticoli.html.twig
+++ b/templates/admin/editarticoli.html.twig
@@ -17,8 +17,9 @@
     {{ form_row(form.data, {'attr': {'class': 'form-control'}}) }}
 </div>
 <div class="form-group">
+  {{dump(articoli)}}
   {% if articoli.image == true %}
-    {{ form_row(form.image, {'attr': {'class': 'hidden'}}) }}
+    {{ form_row(form.image) }}
     <img class="preimage" src="{{ asset('uploads/image/' ~ articoli.image.filename) }}">
   {% else %}
     {{ form_row(form.image) }}
