--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -34,82 +34,34 @@
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-70 col-lg-8">
 							<div class="title text-center">
-								<h1 class="mb-10">Hot topics from Travel Section</h1>
+								<h1 class="mb-10">Ultimi Articoli</h1>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
 							</div>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-lg-6 travel-left">
-							<div class="single-travel media pb-70">
-							  <img class="img-fluid d-flex  mr-3" src="img/t1.jpg" alt="">
+						<div class="col-lg-12 travel">
+							{% for a in articoli %}
+							<div class="col-md-6 single-travel media">
+								<div class="col-md-6">
+							  <img class="img-fluid d-flex  mr-3" src="{{ asset('uploads/image/' ~ a.image) }}" alt="">
+							</div>
 							  <div class="dates">
-							  	<span>20</span>
-							  	<p>Dec</p>
+							  	<span>{{a.data|date("j")}}</span>
+							  	<p class="white">{{a.data|date("F")}}</p>
 							  </div>
 							  <div class="media-body align-self-center">
-							    <h4 class="mt-0"><a href="#">Addiction When Gambling
-							    Becomes A Problem</a></h4>
-							    <p>inappropriate behavior Lorem ipsum dolor sit amet, consectetur.</p>
+							    <h4 class="mt-0"><a href="{{ path('articolisite', { id: home.id }) }}">{{a.titolo|capitalize}}</a></h4>
+							    <p>{{a.articolo|slice(0,80)|raw}}...</p>
 								<div class="meta-bottom d-flex justify-content-between">
 									<p><span class="lnr lnr-heart"></span> 15 Likes</p>
 									<p><span class="lnr lnr-bubble"></span> 02 Comments</p>
 								</div>
 							  </div>
 							</div>
-							<div class="single-travel media">
-							  <img class="img-fluid d-flex  mr-3" src="img/t3.jpg" alt="">
-							  <div class="dates">
-							  	<span>20</span>
-							  	<p>Dec</p>
-							  </div>
-							  <div class="media-body align-self-center">
-							    <h4 class="mt-0"><a href="#">Addiction When Gambling
-							    Becomes A Problem</a></h4>
-							    <p>inappropriate behavior Lorem ipsum dolor sit amet, consectetur.</p>
-								<div class="meta-bottom d-flex justify-content-between">
-									<p><span class="lnr lnr-heart"></span> 15 Likes</p>
-									<p><span class="lnr lnr-bubble"></span> 02 Comments</p>
-								</div>
-							  </div>
-							</div>
-						</div>
-						<div class="col-lg-6 travel-right">
-							<div class="single-travel media pb-70">
-							  <img class="img-fluid d-flex  mr-3" src="img/t2.jpg" alt="">
-							  <div class="dates">
-							  	<span>20</span>
-							  	<p>Dec</p>
-							  </div>
-							  <div class="media-body align-self-center">
-							    <h4 class="mt-0"><a href="#">Addiction When Gambling
-							    Becomes A Problem</a></h4>
-							    <p>inappropriate behavior Lorem ipsum dolor sit amet, consectetur.</p>
-								<div class="meta-bottom d-flex justify-content-between">
-									<p><span class="lnr lnr-heart"></span> 15 Likes</p>
-									<p><span class="lnr lnr-bubble"></span> 02 Comments</p>
-								</div>
-							  </div>
-							</div>
-							<div class="single-travel media">
-							  <img class="img-fluid d-flex  mr-3" src="img/t4.jpg" alt="">
-							  <div class="dates">
-							  	<span>20</span>
-							  	<p>Dec</p>
-							  </div>
-							  <div class="media-body align-self-center">
-							    <h4 class="mt-0"><a href="#">Addiction When Gambling
-							    Becomes A Problem</a></h4>
-							    <p>inappropriate behavior Lorem ipsum dolor sit amet, consectetur.</p>
-								<div class="meta-bottom d-flex justify-content-between">
-									<p><span class="lnr lnr-heart"></span> 15 Likes</p>
-									<p><span class="lnr lnr-bubble"></span> 02 Comments</p>
-								</div>
-							  </div>
-							</div>
-						</div>
-						<a href="#" class="primary-btn load-more pbtn-2 text-uppercase mx-auto mt-60">Load More </a>
+							{% endfor %}
 					</div>
+					<a href="#" class="primary-btn load-more pbtn-2 text-uppercase mx-auto mt-60">Load More </a>
 				</div>
 			</section>
 			<!-- End travel Area -->
