--- a/templates/site/articolisite.html.twig
+++ b/templates/site/articolisite.html.twig
@@ -52,177 +52,29 @@
                             <div class="single-post-content">
                                 {{articoli.articolo|raw}}
                             </div>
-                            <div class="bottom-wrapper">
-                                <div class="row">
-                                    <div class="col-lg-4 single-b-wrap col-md-12">
-                                        <i class="fa fa-heart-o" aria-hidden="true"></i>
-                                        lily and 4 people like this
-                                    </div>
-                                    <div class="col-lg-4 single-b-wrap col-md-12">
-                                        <i class="fa fa-comment-o" aria-hidden="true"></i> 06 comments
-                                    </div>
-                                    <div class="col-lg-4 single-b-wrap col-md-12">
-                                        <ul class="social-icons">
-                                            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Start nav Area -->
-                            <section class="nav-area pt-50 pb-100">
-                                <div class="container">
-                                    <div class="row justify-content-between">
-                                        <div class="col-sm-6 nav-left justify-content-start d-flex">
-                                            <div class="thumb">
-                                                <img src="img/prev.jpg" alt="">
-                                            </div>
-                                            <div class="details">
-                                                <p>Prev Post</p>
-                                                <h4 class="text-uppercase"><a href="#">A Discount Toner</a></h4>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6 nav-right justify-content-end d-flex">
-                                            <div class="details">
-                                                <p>Prev Post</p>
-                                                <h4 class="text-uppercase"><a href="#">A Discount Toner</a></h4>
-                                            </div>
-                                            <div class="thumb">
-                                                <img src="img/next.jpg" alt="">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </section>
-                            <!-- End nav Area -->
-
-                            <!-- Start comment-sec Area -->
-                            <section class="comment-sec-area pt-80 pb-80">
-                                <div class="container">
-                                    <div class="row flex-column">
-                                        <h5 class="text-uppercase pb-80">05 Comments</h5>
-                                        <br>
-                                        <div class="comment-list">
-                                            <div class="single-comment justify-content-between d-flex">
-                                                <div class="user justify-content-between d-flex">
-                                                    <div class="thumb">
-                                                        <img src="img/asset/c1.jpg" alt="">
-                                                    </div>
-                                                    <div class="desc">
-                                                        <h5><a href="#">Emilly Blunt</a></h5>
-                                                        <p class="date">December 4, 2017 at 3:12 pm </p>
-                                                        <p class="comment">
-                                                            Never say goodbye till the end comes!
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                                <div class="reply-btn">
-                                                       <a href="" class="btn-reply text-uppercase">reply</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="comment-list left-padding">
-                                            <div class="single-comment justify-content-between d-flex">
-                                                <div class="user justify-content-between d-flex">
-                                                    <div class="thumb">
-                                                        <img src="img/asset/c2.jpg" alt="">
-                                                    </div>
-                                                    <div class="desc">
-                                                        <h5><a href="#">Emilly Blunt</a></h5>
-                                                        <p class="date">December 4, 2017 at 3:12 pm </p>
-                                                        <p class="comment">
-                                                            Never say goodbye till the end comes!
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                                <div class="reply-btn">
-                                                       <a href="" class="btn-reply text-uppercase">reply</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="comment-list left-padding">
-                                            <div class="single-comment justify-content-between d-flex">
-                                                <div class="user justify-content-between d-flex">
-                                                    <div class="thumb">
-                                                        <img src="img/asset/c3.jpg" alt="">
-                                                    </div>
-                                                    <div class="desc">
-                                                        <h5><a href="#">Emilly Blunt</a></h5>
-                                                        <p class="date">December 4, 2017 at 3:12 pm </p>
-                                                        <p class="comment">
-                                                            Never say goodbye till the end comes!
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                                <div class="reply-btn">
-                                                       <a href="" class="btn-reply text-uppercase">reply</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="comment-list">
-                                            <div class="single-comment justify-content-between d-flex">
-                                                <div class="user justify-content-between d-flex">
-                                                    <div class="thumb">
-                                                        <img src="img/asset/c4.jpg" alt="">
-                                                    </div>
-                                                    <div class="desc">
-                                                        <h5><a href="#">Emilly Blunt</a></h5>
-                                                        <p class="date">December 4, 2017 at 3:12 pm </p>
-                                                        <p class="comment">
-                                                            Never say goodbye till the end comes!
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                                <div class="reply-btn">
-                                                       <a href="" class="btn-reply text-uppercase">reply</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="comment-list">
-                                            <div class="single-comment justify-content-between d-flex">
-                                                <div class="user justify-content-between d-flex">
-                                                    <div class="thumb">
-                                                        <img src="img/asset/c5.jpg" alt="">
-                                                    </div>
-                                                    <div class="desc">
-                                                        <h5><a href="#">Emilly Blunt</a></h5>
-                                                        <p class="date">December 4, 2017 at 3:12 pm </p>
-                                                        <p class="comment">
-                                                            Never say goodbye till the end comes!
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                                <div class="reply-btn">
-                                                       <a href="" class="btn-reply text-uppercase">reply</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </section>
-                            <!-- End comment-sec Area -->
-
                             <!-- Start commentform Area -->
+														{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                             <section class="commentform-area  pb-120 pt-80 mb-100">
                                 <div class="container">
-                                    <h5 class="text-uppercas pb-50">Leave a Reply</h5>
+                                    <h5 class="text-uppercas pb-50">Commenta articolo</h5>
                                     <div class="row flex-row d-flex">
                                         <div class="col-lg-6">
-                                            <input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control" required="" type="text">
-                                            <input name="email" placeholder="Enter your email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your email'" class="common-input mb-20 form-control" required="" type="email">
-                                            <input name="Subject" placeholder="Subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your Subject'" class="common-input mb-20 form-control" required="" type="text">
-
-                                        </div>
-                                        <div class="col-lg-6">
-                                            <textarea class="form-control mb-10" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
-                                            <a class="primary-btn mt-20" href="#">Comment</a>
-                                        </div>
+																					{{ form_start(form) }}
+																					<div class="form-group">
+																							{{ form_row(form.commenti, {'attr': {'class': 'form-control common-input mb-10'}}) }}
+																					</div>
+																					<div class="form-group">
+																							{{ form_row(form.likecomment, {'attr': {'class': 'form-control common-input mb-10'}}) }}
+																					</div>
+																						<button type="submit" class="primary-btn">Commenta</button>
+																				{{ form_end(form) }}
                                     </div>
                                 </div>
                             </section>
+														{% else %}
+														<h5 class="text-uppercas pb-50">Se vuoi commentare l'articolo registrati</h5>
+														<a class="dropdown-item"><a href="{{ path('register') }}">Registrati</a>
+														{% endif %}
                             <!-- End commentform Area -->
 
                         </div>
@@ -306,34 +158,6 @@
                                 </div>
                             </div>
                         </div>
-
-
-                        <div class="single_widget cat_widget">
-                            <h4 class="text-uppercase pb-20">post archive</h4>
-                            <ul>
-                                <li>
-                                    <a href="#">Dec'17 <span>37</span></a>
-                                </li>
-                                <li>
-                                    <a href="#">Nov'17 <span>37</span></a>
-                                </li>
-                                <li>
-                                    <a href="#">Oct'17 <span>37</span></a>
-                                </li>
-                                <li>
-                                    <a href="#">Sept'17 <span>37</span></a>
-                                </li>
-                                <li>
-                                    <a href="#">Aug'17 <span>37</span></a>
-                                </li>
-                                <li>
-                                    <a href="#">Jul'17 <span>37</span></a>
-                                </li>
-                                <li>
-                                    <a href="#">Jun'17 <span>37</span></a>
-                                </li>
-                            </ul>
-                        </div>
                         <div class="single_widget tag_widget">
                             <h4 class="text-uppercase pb-20">Tag Clouds</h4>
                             <ul>
@@ -355,4 +179,5 @@
         <!-- End post Area -->
     </div>
     <!-- End post Area -->
+
 {% endblock %}
