--- a/templates/site/articolisite.html.twig
+++ b/templates/site/articolisite.html.twig
@@ -60,6 +60,11 @@
 																		</div>
 																	<div class="col-lg-4 single-b-wrap col-md-12">
 																			<i class="fa fa-comment-o" aria-hidden="true"></i>
+																		{% set count = 0 %}
+																		{% for commenti in articoli.commenti %}
+																		    {% set count = count + 1 %}
+																		{% endfor %}
+																		{{ count }}
 																	</div>
 																	<div class="col-lg-4 single-b-wrap col-md-12">
 																			<ul class="social-icons">
@@ -70,23 +75,20 @@
 															<hr>
                             <!-- Start commentform Area -->
 														{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                            <section class="commentform-area  pb-120 pt-80 mb-100">
+                            <section class="commentform-area  pt-40 ">
                                 <div class="container">
 																	<div class="row flex-column">
-                                        <h5 class="text-uppercase pb-80"></h5>
+                                        <h5 class="text-uppercase">Commenti</h5>
                                         <br>
                                         <div class="comment-list">
 																					{% for commenti in articoli.commenti %}
                                             <div class="single-comment justify-content-between d-flex">
                                                 <div class="user justify-content-between d-flex">
                                                     <div class="desc">
-                                                        <h5><a href="#">{{commenti.userId.username|capitalize}}</a></h5>
+                                                        <h5>{{commenti.userId.username|capitalize}}</h5>
                                                         <p class="date"></p>
                                                         <p class="comment">{{commenti.commenti}}</p>
                                                     </div>
-                                                </div>
-                                                <div class="reply-btn">
-                                                       <a href="" class="btn-reply text-uppercase">Rispondi</a>
                                                 </div>
                                             </div>
 																					{% endfor %}
@@ -94,7 +96,7 @@
                                         </div>
                                     </div>
 																		<hr>
-                                    <h5 class="text-uppercas pb-50">Commenta articolo</h5>
+                                    <h5 class="text-uppercas pt-20 pb-10">Commenta articolo</h5>
                                     <div class="row flex-row d-flex">
                                         <div class="col-lg-6">
 																					{{ form_start(form) }}
