--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
                     </a>
                     <div class="dropdown-menu">
                       {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                        {{ app.user.username }}
+                        <a class="dropdown-item light">Ciao! {{ app.user.username }}</a>
                         <a class="dropdown-item"><a href="{{ path('logout') }}">Disconnetti</a>
                         {% else %}
                         <a class="dropdown-item"><a href="{{ path('login') }}">Accedi</a>
@@ -57,13 +57,11 @@
 
 					<div class="row d-flex justify-content-between">
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						<p class="col-lg-8 col-sm-12 footer-text">Copyright by <a href="" target="_blank">Colorlib</a></p>
+						<p class="col-lg-8 col-sm-12 footer-text">Copyright by Antonio Galdo</p>
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						<div class="col-lg-4 col-sm-12 footer-social">
 							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
+							<a href="#"><i class="fa fa-instagram"></i></a>
 						</div>
 					</div>
 				</div>
