--- a/templates/site/articolisite.html.twig
+++ b/templates/site/articolisite.html.twig
@@ -55,10 +55,6 @@
 														<div class="bottom-wrapper">
                                 <div class="row">
 																	<div class="col-lg-4 single-b-wrap col-md-12">
-																	<a href="{{path('addlikecomment',{'id': articoli.id})}}">{% if articoli == true %}x{% else %}0{% endif %}</a>
-																			lily and 4 people like this
-																		</div>
-																	<div class="col-lg-4 single-b-wrap col-md-12">
 																			<i class="fa fa-comment-o" aria-hidden="true"></i>
 																		{% set count = 0 %}
 																		{% for commenti in articoli.commenti %}
@@ -68,7 +64,9 @@
 																	</div>
 																	<div class="col-lg-4 single-b-wrap col-md-12">
 																			<ul class="social-icons">
-																					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+																					<li>
+																							<div class="fb-share-button"data-href="{{ path(app.request.attributes.get('_route'),app.request.attributes.get('_route_params')) }}" data-layout="button" data-size="small" data-mobile-iframe="true"></div>
+																					</li>
 																	</div>
                                 </div>
 															</div>
@@ -117,96 +115,19 @@
                         </div>
                     </div>
                     <div class="col-lg-4 sidebar-area ">
-                        <div class="single_widget search_widget">
-                            <div id="imaginary_container">
-                                <div class="input-group stylish-input-group">
-                                    <input type="text" class="form-control"  placeholder="Search" >
-                                    <span class="input-group-addon">
-                                        <button type="submit">
-                                            <span class="lnr lnr-magnifier"></span>
-                                        </button>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
 
-                        <div class="single_widget about_widget">
-                            <img src="img/asset/s-img.jpg" alt="">
-                            <h2 class="text-uppercase">Adele Gonzalez</h2>
-                            <p>
-                                MCSE boot camps have its supporters and
-                                its detractors. Some people do not understand why you should have to spend money
-                            </p>
-                            <div class="social-link">
-                                <a href="#"><button class="btn"><i class="fa fa-facebook" aria-hidden="true"></i> Like</button></a>
-                                <a href="#"><button class="btn"><i class="fa fa-twitter" aria-hidden="true"></i> follow</button></a>
-                            </div>
-                        </div>
                         <div class="single_widget cat_widget">
-                            <h4 class="text-uppercase pb-20">post categories</h4>
+                            <h4 class="text-uppercase pb-20">Post Tags</h4>
                             <ul>
+															{% set count = 0 %}
+															{% for a in articolo %}
+															{% set count = count + 1 %}
+																{% for t in a.tags %}
                                 <li>
-                                    <a href="#">Technology <span>37</span></a>
+                                    <a href="#">{{t}} <span>{{ count }}</span></a>
                                 </li>
-                                <li>
-                                    <a href="#">Lifestyle <span>37</span></a>
-                                </li>
-                                <li>
-                                    <a href="#">Fashion <span>37</span></a>
-                                </li>
-                                <li>
-                                    <a href="#">Art <span>37</span></a>
-                                </li>
-                                <li>
-                                    <a href="#">Food <span>37</span></a>
-                                </li>
-                                <li>
-                                    <a href="#">Architecture <span>37</span></a>
-                                </li>
-                                <li>
-                                    <a href="#">Adventure <span>37</span></a>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="single_widget recent_widget">
-                            <h4 class="text-uppercase pb-20">Recent Posts</h4>
-                            <div class="active-recent-carusel">
-                                <div class="item">
-                                    <img src="img/asset/slider.jpg" alt="">
-                                    <p class="mt-20 title text-uppercase">Home Audio Recording <br>
-                                    For Everyone</p>
-                                    <p>02 Hours ago <span> <i class="fa fa-heart-o" aria-hidden="true"></i>
-                                    06 <i class="fa fa-comment-o" aria-hidden="true"></i>02</span></p>
-                                </div>
-                                <div class="item">
-                                    <img src="img/asset/slider.jpg" alt="">
-                                    <p class="mt-20 title text-uppercase">Home Audio Recording <br>
-                                    For Everyone</p>
-                                    <p>02 Hours ago <span> <i class="fa fa-heart-o" aria-hidden="true"></i>
-                                    06 <i class="fa fa-comment-o" aria-hidden="true"></i>02</span></p>
-                                </div>
-                                <div class="item">
-                                    <img src="img/asset/slider.jpg" alt="">
-                                    <p class="mt-20 title text-uppercase">Home Audio Recording <br>
-                                    For Everyone</p>
-                                    <p>02 Hours ago <span> <i class="fa fa-heart-o" aria-hidden="true"></i>
-                                    06 <i class="fa fa-comment-o" aria-hidden="true"></i>02</span></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="single_widget tag_widget">
-                            <h4 class="text-uppercase pb-20">Tag Clouds</h4>
-                            <ul>
-                                <li><a href="#">Lifestyle</a></li>
-                                <li><a href="#">Art</a></li>
-                                <li><a href="#">Adventure</a></li>
-                                <li><a href="#">Food</a></li>
-                                <li><a href="#">Technology</a></li>
-                                <li><a href="#">Fashion</a></li>
-                                <li><a href="#">Adventure</a></li>
-                                <li><a href="#">Food</a></li>
-                                <li><a href="#">Technology</a></li>
+																{% endfor %}
+															{% endfor %}
                             </ul>
                         </div>
                     </div>
@@ -216,6 +137,13 @@
         <!-- End post Area -->
     </div>
     <!-- End post Area -->
-<script src="{{ asset('js/jquery-2.2.4.min.js') }}"></script>
+		<script>(function(d, s, id) {
+	var js, fjs = d.getElementsByTagName(s)[0];
+	if (d.getElementById(id)) return;
+	js = d.createElement(s); js.id = id;
+	js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+	fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 
 {% endblock %}
