--- a/templates/site/categoriasite.html.twig
+++ b/templates/site/categoriasite.html.twig
@@ -76,7 +76,7 @@
 																	 </p>
 																	 <p class="footer pt-20">
 																	 <i class="fa fa-heart-o" aria-hidden="true"></i>
-																	 <a href="#">06 Likes</a>     <i class="ml-20 fa fa-comment-o" aria-hidden="true"></i> <a href="#">02 Comments</a>
+																	 <i class="ml-20 fa fa-comment-o" aria-hidden="true"></i> <a href="#">02 Comments</a>
 																	 </p>
 															 </div>
 													 </div>
