--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -12,7 +12,6 @@
 						</div>
 						<div class="head-bottom-meta d-flex justify-content-between align-items-end col-lg-12">
 							<div class="col-lg-6 flex-row d-flex meta-left no-padding">
-								<p><span class="lnr lnr-heart"></span> 15 Likes</p>
 								<p><span class="lnr lnr-bubble"></span>
 									{% set count = 0 %}
 									{% for c in home.commenti %}
@@ -26,7 +25,6 @@
 									<h4 class="text-white">{{home.autore|upper}}</h4>
 									<p class="text-white">{{home.data|date("j F Y")}}</p>
 								</div>
-								<img class="img-fluid user-img" src="img/user.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -46,7 +44,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-lg-12 travel">
+						<div class="col-lg-12 travel" id="articoli">
 							{% for a in articoli %}
 							<div class="col-md-6 single-travel media">
 								<div class="col-md-6">
@@ -56,11 +54,10 @@
 							  	<span>{{a.data|date("j")}}</span>
 							  	<p class="white">{{a.data|date("F")}}</p>
 							  </div>
-							  <div class="media-body align-self-center">
+							  <div class="align-self-center articleindex">
 							    <h4 class="mt-0"><a href="{{ path('articolisite', { id: a.id }) }}">{{a.titolo|capitalize}}</a></h4>
-							    <p>{{a.articolo|slice(0,80)|raw}}...</p>
+							    <p class="articoloindex">{{a.articolo|slice(0,80)|raw}}...</p>
 								<div class="meta-bottom d-flex justify-content-between">
-									<p><span class="lnr lnr-heart"></span> 15 Likes</p>
 									<p><span class="lnr lnr-bubble"></span>
 										{% set count = 0 %}
 										{% for c in a.commenti %}
@@ -70,10 +67,11 @@
 									</p>
 								</div>
 							  </div>
+								<div class="space"></div>
 							</div>
 							{% endfor %}
 					</div>
-					<a href="#" class="primary-btn load-more pbtn-2 text-uppercase mx-auto mt-60">Load More </a>
+					<a class="primary-btn pbtn-2 text-uppercase mx-auto mt-60" id="load-more">Load More </a>
 				</div>
 			</section>
 			<!-- End travel Area -->
@@ -92,7 +90,6 @@
 						{% for c in categoria %}
 						<div class="item single-cat">
 							<a href="{{ path('categoriasite', { id: c.id }) }}"><img src="{{ asset('uploads/image/' ~ c.image) }}" alt="{{c.nome|capitalize}}"></a>
-							<p class="date">{{c.data|date("j F Y")}}</p>
 							<h4><a href="{{ path('categoriasite', { id: c.id }) }}">{{c.nome|capitalize}}</a></h4>
 						</div>
 						{% endfor %}
@@ -100,4 +97,23 @@
 				</div>
 			</section>
 			<!-- End category Area -->
+<script src="{{ asset('js/jquery-2.2.4.min.js') }}"></script>
+<script>
+        var offsetarticolo = 2;
+        $(document).on('click', '#load-more', function() {
+            $.get(
+                '{{ path('ajax_get_articolo') }}',
+                { offsetarticolo: offsetarticolo },
+                function(data, status) {
+                    if(status == 'success') {
+                        if(!data) {
+                            $('#load-more').hide();
+                        }
+                        $('#articoli').append(data);
+                    }
+                    offsetarticolo += 2;
+                }
+            );
+        })
+    </script>
 {% endblock %}
