--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,7 +14,9 @@
   <!-- /.login-logo -->
   <div class="login-box-body">
     <div class="login-logo">
-      <img class="brand" src="{{ asset('images/Logo1.svg') }}"></img>
+      <a href="{{ path('home') }}">
+        <img class="brand" src="{{ asset('images/Logo1.svg') }}"></img>
+      </a>
     </div>
     <p class="login-box-msg">Accedi</p>
 
