--- a/templates/site/articolisite.html.twig
+++ b/templates/site/articolisite.html.twig
@@ -108,7 +108,7 @@
                             </section>
 														{% else %}
 														<h5 class="text-uppercas pb-50">Se vuoi commentare l'articolo registrati</h5>
-														<a class="dropdown-item"><a href="{{ path('register') }}">Registrati</a>
+														<a class="primary-btn pbtn-2 text-uppercase mx-auto mb-15" href="{{ path('register') }}">Registrati</a>
 														{% endif %}
                             <!-- End commentform Area -->
 
@@ -118,15 +118,9 @@
 
                         <div class="single_widget cat_widget">
                             <h4 class="text-uppercase pb-20">Post Tags</h4>
-                            <ul>
-															{% set count = 0 %}
+                            <ul>{{dump(articolo)}}
 															{% for a in articolo %}
-															{% set count = count + 1 %}
-																{% for t in a.tags %}
-                                <li>
-                                    <a href="#">{{t}} <span>{{ count }}</span></a>
-                                </li>
-																{% endfor %}
+
 															{% endfor %}
                             </ul>
                         </div>
