--- a/templates/site/categoriasite.html.twig
+++ b/templates/site/categoriasite.html.twig
@@ -6,10 +6,10 @@
 							 <div class="container">
 									 <div class="row justify-content-between align-items-center d-flex">
 											 <div class="col-lg-8 top-left">
-													 <h1 class="text-white mb-20">Fashion News</h1>
+													 <h1 class="text-white mb-20">{{categoria.nome|capitalize}}</h1>
 													 <ul>
 															 <li><a href="index.html">Home</a><span class="lnr lnr-arrow-right"></span></li>
-															 <li><a href="category.html">Category</a><span class="lnr lnr-arrow-right"></span></li>
+															 <li><a href="category.html">{{categoria.nome|capitalize}}</a></li>
 													 </ul>
 											 </div>
 									 </div>
@@ -25,169 +25,30 @@
 					 <div class="container">
 							 <div class="row justify-content-center d-flex">
 									 <div class="col-lg-8">
-											 <div class="top-posts">
-													 <div class="container">
-															 <div class="row justify-content-center">
-																	 <div class="single-posts col-lg-6 col-sm-6">
-																			 <img class="img-fluid" src="img/asset/p1.jpg" alt="">
-																			 <div class="date mt-20 mb-20">10 Jan 2018</div>
-																			 <a href="#"><h4 class="text-uppercase">It S Hurricane Season Visiting </h4></a>
-																	 </div>
-																	 <div class="single-posts col-lg-6 col-sm-6">
-																			 <img class="img-fluid" src="img/asset/p2.jpg" alt="">
-																			 <div class="date mt-20 mb-20">10 Jan 2018</div>
-																			 <a href="#"><h4 class="text-uppercase">What Makes A Hotel Boutique</h4></a>
-																	 </div>
-															 </div>
-													 </div>
-											 </div>
-											 <div class="post-lists">
+										 {% for c in categoria.articolicategoria %}
 													 <div class="single-list flex-row d-flex">
-															 <div class="thumb">
+															 <div class="thumb col-md-6">
 																	 <div class="date">
-																			 <span>20</span><br>Dec
+																		 <span>{{c.data|date("j")}}</span>
+																		 <p class="white">{{c.data|date("F")}}</p>
 																	 </div>
-																	 <img src="img/asset/l1.jpg" alt="">
+																	 <img class="img-fluid d-flex" src="{{ asset('uploads/image/' ~ c.image) }}" alt="">
 															 </div>
 															 <div class="detail">
-																	 <a href="#"><h4 class="pb-20">Addiction When Gambling <br>
-																	 Becomes A Problem</h4></a>
-																	 <p>
-																			 inappropriate behavior Lorem ipsum dolor sit amet, consecteturinapprop riate behavior Lorem ipsum dolor sit amet, consectetur.
-																	 </p>
-																	 <p class="footer pt-20">
-																	 <i class="fa fa-heart-o" aria-hidden="true"></i>
-																	 <a href="#">06 Likes</a>     <i class="ml-20 fa fa-comment-o" aria-hidden="true"></i> <a href="#">02 Comments</a>
+																	 <a href="#"><h4 class="pb-20">{{c.titolo}}</h4></a>
+																	 {{c.articolo|slice(0,100)|raw}}
+																	 <p class="footer pt-10">
+																	<i class="fa fa-comment-o" aria-hidden="true"></i> <a href="#">02 Comments</a>
 																	 </p>
 															 </div>
 													 </div>
-													 <div class="single-list flex-row d-flex">
-															 <div class="thumb">
-																	 <div class="date">
-																			 <span>20</span><br>Dec
-																	 </div>
-																	 <img src="img/asset/l2.jpg" alt="">
-															 </div>
-															 <div class="detail">
-																	 <a href="#"><h4 class="pb-20">Addiction When Gambling <br>
-																	 Becomes A Problem</h4></a>
-																	 <p>
-																			 inappropriate behavior Lorem ipsum dolor sit amet, consecteturinapprop riate behavior Lorem ipsum dolor sit amet, consectetur.
-																	 </p>
-																	 <p class="footer pt-20">
-																	 <i class="fa fa-heart-o" aria-hidden="true"></i>
-																	 <i class="ml-20 fa fa-comment-o" aria-hidden="true"></i> <a href="#">02 Comments</a>
-																	 </p>
-															 </div>
-													 </div>
-													 <div class="single-list flex-row d-flex">
-															 <div class="thumb">
-																	 <div class="date">
-																			 <span>20</span><br>Dec
-																	 </div>
-																	 <img src="img/asset/l3.jpg" alt="">
-															 </div>
-															 <div class="detail">
-																	 <a href="#"><h4 class="pb-20">Addiction When Gambling <br>
-																	 Becomes A Problem</h4></a>
-																	 <p>
-																			 inappropriate behavior Lorem ipsum dolor sit amet, consecteturinapprop riate behavior Lorem ipsum dolor sit amet, consectetur.
-																	 </p>
-																	 <p class="footer pt-20">
-																	 <i class="fa fa-heart-o" aria-hidden="true"></i>
-																	 <a href="#">06 Likes</a>     <i class="ml-20 fa fa-comment-o" aria-hidden="true"></i> <a href="#">02 Comments</a>
-																	 </p>
-															 </div>
-													 </div>
-													 <div class="single-list flex-row d-flex">
-															 <div class="thumb">
-																	 <div class="date">
-																			 <span>20</span><br>Dec
-																	 </div>
-																	 <img src="img/asset/l4.jpg" alt="">
-															 </div>
-															 <div class="detail">
-																	 <a href="#"><h4 class="pb-20">Addiction When Gambling <br>
-																	 Becomes A Problem</h4></a>
-																	 <p>
-																			 inappropriate behavior Lorem ipsum dolor sit amet, consecteturinapprop riate behavior Lorem ipsum dolor sit amet, consectetur.
-																	 </p>
-																	 <p class="footer pt-20">
-																	 <i class="fa fa-heart-o" aria-hidden="true"></i>
-																	 <a href="#">06 Likes</a>     <i class="ml-20 fa fa-comment-o" aria-hidden="true"></i> <a href="#">02 Comments</a>
-																	 </p>
-															 </div>
-													 </div>
+													 {% endfor %}
 													 <div class="justify-content-center d-flex">
 															 <a class="text-uppercase primary-btn loadmore-btn mt-40 mb-60" href="#"> Load More Post</a>
 													 </div>
-											 </div>
-											 <div class="top-posts pt-50">
-													 <div class="container">
-															 <div class="row justify-content-center">
-																	 <div class="single-posts col-lg-6 col-sm-6">
-																			 <img class="img-fluid" src="img/asset/p1.jpg" alt="">
-																			 <div class="date mt-20 mb-20">10 Jan 2018</div>
-																			 <div class="detail">
-																					 <a href="#"><h4 class="pb-20">Addiction When Gambling <br>
-																					 Becomes A Problem</h4></a>
-																					 <p>
-																							 inappropriate behavior Lorem ipsum dolor sit amet, consecteturinapprop riate behavior Lorem ipsum dolor sit amet, consectetur.
-																					 </p>
-																					 <p class="footer pt-20">
-																					 <i class="fa fa-heart-o" aria-hidden="true"></i>
-																					 <a href="#">06 Likes</a>     <i class="ml-20 fa fa-comment-o" aria-hidden="true"></i> <a href="#">02 Comments</a>
-																					 </p>
-																			 </div>
-																	 </div>
-																	 <div class="single-posts col-lg-6 col-sm-6">
-																			 <img class="img-fluid" src="img/asset/p2.jpg" alt="">
-																			 <div class="date mt-20 mb-20">10 Jan 2018</div>
-																			 <div class="detail">
-																					 <a href="#"><h4 class="pb-20">Addiction When Gambling <br>
-																					 Becomes A Problem</h4></a>
-																					 <p>
-																							 inappropriate behavior Lorem ipsum dolor sit amet, consecteturinapprop riate behavior Lorem ipsum dolor sit amet, consectetur.
-																					 </p>
-																					 <p class="footer pt-20">
-																					 <i class="fa fa-heart-o" aria-hidden="true"></i>
-																					 <a href="#">06 Likes</a>     <i class="ml-20 fa fa-comment-o" aria-hidden="true"></i> <a href="#">02 Comments</a>
-																					 </p>
-																			 </div>
-																	 </div>
-																	 <div class="justify-content-center d-flex">
-																			 <a class="text-uppercase primary-btn loadmore-btn mt-70 mb-60" href="#"> Load More Post</a>
-																	 </div>
-															 </div>
-													 </div>
-											 </div>
 									 </div>
 									 <div class="col-lg-4 sidebar-area">
-											 <div class="single_widget search_widget">
-													 <div id="imaginary_container">
-															 <div class="input-group stylish-input-group">
-																	 <input type="text" class="form-control"  placeholder="Search" >
-																	 <span class="input-group-addon">
-																			 <button type="submit">
-																					 <span class="lnr lnr-magnifier"></span>
-																			 </button>
-																	 </span>
-															 </div>
-													 </div>
-											 </div>
 
-											 <div class="single_widget about_widget">
-													 <img src="img/asset/s-img.jpg" alt="">
-													 <h2 class="text-uppercase">Adele Gonzalez</h2>
-													 <p>
-															 MCSE boot camps have its supporters and
-															 its detractors. Some people do not understand why you should have to spend money
-													 </p>
-													 <div class="social-link">
-															 <a href="#"><button class="btn"><i class="fa fa-facebook" aria-hidden="true"></i> Like</button></a>
-															 <a href="#"><button class="btn"><i class="fa fa-twitter" aria-hidden="true"></i> follow</button></a>
-													 </div>
-											 </div>
 											 <div class="single_widget cat_widget">
 													 <h4 class="text-uppercase pb-20">post categories</h4>
 													 <ul>
@@ -212,75 +73,6 @@
 															 <li>
 																	 <a href="#">Adventure <span>37</span></a>
 															 </li>
-													 </ul>
-											 </div>
-
-											 <div class="single_widget recent_widget">
-													 <h4 class="text-uppercase pb-20">Recent Posts</h4>
-													 <div class="active-recent-carusel">
-															 <div class="item">
-																	 <img src="img/asset/slider.jpg" alt="">
-																	 <p class="mt-20 title text-uppercase">Home Audio Recording <br>
-																	 For Everyone</p>
-																	 <p>02 Hours ago <span> <i class="fa fa-heart-o" aria-hidden="true"></i>
-																	 06 <i class="fa fa-comment-o" aria-hidden="true"></i>02</span></p>
-															 </div>
-															 <div class="item">
-																	 <img src="img/asset/slider.jpg" alt="">
-																	 <p class="mt-20 title text-uppercase">Home Audio Recording <br>
-																	 For Everyone</p>
-																	 <p>02 Hours ago <span> <i class="fa fa-heart-o" aria-hidden="true"></i>
-																	 06 <i class="fa fa-comment-o" aria-hidden="true"></i>02</span></p>
-															 </div>
-															 <div class="item">
-																	 <img src="img/asset/slider.jpg" alt="">
-																	 <p class="mt-20 title text-uppercase">Home Audio Recording <br>
-																	 For Everyone</p>
-																	 <p>02 Hours ago <span> <i class="fa fa-heart-o" aria-hidden="true"></i>
-																	 06 <i class="fa fa-comment-o" aria-hidden="true"></i>02</span></p>
-															 </div>
-													 </div>
-											 </div>
-
-
-											 <div class="single_widget cat_widget">
-													 <h4 class="text-uppercase pb-20">post archive</h4>
-													 <ul>
-															 <li>
-																	 <a href="#">Dec'17 <span>37</span></a>
-															 </li>
-															 <li>
-																	 <a href="#">Nov'17 <span>37</span></a>
-															 </li>
-															 <li>
-																	 <a href="#">Oct'17 <span>37</span></a>
-															 </li>
-															 <li>
-																	 <a href="#">Sept'17 <span>37</span></a>
-															 </li>
-															 <li>
-																	 <a href="#">Aug'17 <span>37</span></a>
-															 </li>
-															 <li>
-																	 <a href="#">Jul'17 <span>37</span></a>
-															 </li>
-															 <li>
-																	 <a href="#">Jun'17 <span>37</span></a>
-															 </li>
-													 </ul>
-											 </div>
-											 <div class="single_widget tag_widget">
-													 <h4 class="text-uppercase pb-20">Tag Clouds</h4>
-													 <ul>
-															 <li><a href="#">Lifestyle</a></li>
-															 <li><a href="#">Art</a></li>
-															 <li><a href="#">Adventure</a></li>
-															 <li><a href="#">Food</a></li>
-															 <li><a href="#">Technology</a></li>
-															 <li><a href="#">Fashion</a></li>
-															 <li><a href="#">Adventure</a></li>
-															 <li><a href="#">Food</a></li>
-															 <li><a href="#">Technology</a></li>
 													 </ul>
 											 </div>
 									 </div>
