--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,8 +25,8 @@
 						  <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
 						    <ul class="navbar-nav">
 								<li><a href="#home">Home</a></li>
-								<li><a href="#news">News</a></li>
-                <li><a href="#categorie">Categorie</a></li>
+								<li><a href="{{path('home')}}#news">News</a></li>
+                <li><a href="{{path('home')}}#categorie">Categorie</a></li>
 								<!-- Dropdown -->
                   <li class="dropdown">
                     <a class="dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
