--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
 
 						  <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
 						    <ul class="navbar-nav">
-								<li><a href="#home">Home</a></li>
+								<li><a href="{{path('home')}}">Home</a></li>
 								<li><a href="{{path('home')}}#news">News</a></li>
                 <li><a href="{{path('home')}}#categorie">Categorie</a></li>
 								<!-- Dropdown -->
