--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -39,7 +39,7 @@
 						<div class="menu-content pb-70 col-lg-8">
 							<div class="title text-center">
 								<h1 class="mb-10">Ultimi Articoli</h1>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
+								<p>Ultimi articoli inerenti a tutte le categorie presenti sul sito</p>
 							</div>
 						</div>
 					</div>
@@ -73,7 +73,7 @@
 							</div>
 							{% endfor %}
 					</div>
-					<a class="primary-btn pbtn-2 text-uppercase mx-auto mt-60" id="load-more">Load More </a>
+					<a class="primary-btn pbtn-2 text-uppercase mx-auto mt-60" id="load-more">Leggi di più</a>
 				</div>
 			</section>
 			<!-- End travel Area -->
@@ -84,7 +84,7 @@
 						<div class="menu-content pb-40 col-lg-8">
 							<div class="title text-center">
 								<h1 class="mb-10">Categorie</h1>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
+								<p>Puoi trovare tantissimi articoli inerenti alle categorie che più ti incuriosiscono</p>
 							</div>
 						</div>
 					</div>
