--- a/templates/site/articolisite.html.twig
+++ b/templates/site/articolisite.html.twig
@@ -5,12 +5,12 @@
 					 <section class="top-section-area section-gap">
 							 <div class="container">
 									 <div class="row justify-content-between align-items-center d-flex">
-											 <div class="col-lg-8 top-left">
-													 <h1 class="text-white mb-20">{{articoli.titolo|capitalize}}</h1>
+											 <div class="col-lg-12 top-left">
+													 <h1 class="text-white mb-20">{{articolo.titolo|capitalize}}</h1>
 													 <ul>
-															 <li><a href="index.html">Home</a><span class="lnr lnr-arrow-right"></span></li>
-															 <li><a href="{{ path('categoriasite', { id: articoli.categoria.id }) }}">{{articoli.categoria.nome|capitalize}}</a><span class="lnr lnr-arrow-right"></span></li>
-															 <li class="text-white">{{articoli.titolo|capitalize}}</li>
+															 <li><a href="{{path('home')}}">Home</a><span class="lnr lnr-arrow-right"></span></li>
+															 <li><a href="{{ path('categoriasite', { id: articolo.categoria.id }) }}">{{articolo.categoria.nome|capitalize}}</a><span class="lnr lnr-arrow-right"></span></li>
+															 <li class="text-white">{{articolo.titolo|capitalize}}</li>
 													 </ul>
 											 </div>
 									 </div>
@@ -25,39 +25,36 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="single-page-post">
-                            <img class="img-fluid" src="{{ asset('uploads/image/' ~ articoli.image) }}" alt="">
+                            <img class="img-fluid" src="{{ asset('uploads/image/' ~ articolo.image) }}" alt="">
                             <div class="top-wrapper ">
                                 <div class="row d-flex justify-content-between">
                                     <h2 class="col-lg-8 col-md-12 text-uppercase">
-                                        {{articoli.titolo}}
+                                        {{articolo.titolo}}
                                     </h2>
                                     <div class="col-lg-4 col-md-12 right-side d-flex justify-content-end">
                                         <div class="desc">
-                                           <h2>{{articoli.autore|upper}}</h2>
-                                            <h3>{{articoli.data|date("j F Y")}}</h3>
-                                        </div>
-                                        <div class="user-img">
-                                            <img src="img/user.jpg" alt="">
+                                           <h2>{{articolo.autore|upper}}</h2>
+                                            <h3>{{articolo.data|date("j F Y")}}</h3>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="tags">
                                 <ul>
-																	{% for a in articoli.tags %}
-                                    <li><a href="#">{{a|capitalize}}</a></li>
+																	{% for a in articolo.tags %}
+                                    <li class="tagarticle">{{a|capitalize}}</li>
 																	{% endfor %}
                                 </ul>
                             </div>
                             <div class="single-post-content">
-                                {{articoli.articolo|raw}}
+                                {{articolo.articolo|raw}}
                             </div>
 														<div class="bottom-wrapper">
                                 <div class="row">
 																	<div class="col-lg-4 single-b-wrap col-md-12">
 																			<i class="fa fa-comment-o" aria-hidden="true"></i>
 																		{% set count = 0 %}
-																		{% for commenti in articoli.commenti %}
+																		{% for commenti in articolo.commenti %}
 																		    {% set count = count + 1 %}
 																		{% endfor %}
 																		{{ count }}
@@ -79,7 +76,7 @@
                                         <h5 class="text-uppercase">Commenti</h5>
                                         <br>
                                         <div class="comment-list">
-																					{% for commenti in articoli.commenti %}
+																					{% for commenti in articolo.commenti %}
                                             <div class="single-comment justify-content-between d-flex">
                                                 <div class="user justify-content-between d-flex">
                                                     <div class="desc">
@@ -117,29 +114,16 @@
                     <div class="col-lg-4 sidebar-area ">
 
                         <div class="single_widget cat_widget">
-                            <h4 class="text-uppercase pb-20">Post Tags</h4>
+                            <h4 class="text-uppercase pb-20">Nuovi articoli</h4>
 
-															<ul>
-	 															 <li>
-	 																	 <a href="#">Itinerari <span>37</span></a>
-	 															 </li>
-	 															 <li>
-	 																	 <a href="#">Adventure <span>37</span></a>
-	 															 </li>
-	 															 <li>
-	 																	 <a href="#">Food <span>37</span></a>
-	 															 </li>
-	 															 <li>
-	 																	 <a href="#">Tecnologia <span>37</span></a>
-	 															 </li>
-	 															 <li>
-	 																	 <a href="#">Cultura <span>37</span></a>
-	 															 </li>
-	 															 <li>
-	 																	 <a href="#">Hobby <span>37</span></a>
-	 															 </li>
+															<ul id="articoli">
+																{% for a in articoli %}
+															 <a href="{{path('articolisite',{id: a.id})}}"><li class="grey">{{a.titolo}}</li></a>
+															 {% endfor %}
 	 													 </ul>
-                            
+														 <ul>
+	 													<a class="primary-btn pbtn-2 text-uppercase mx-auto" id="load-more">Leggi di più</a>
+	 												</ul>
                         </div>
                     </div>
                 </div>
@@ -155,6 +139,24 @@
 	js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
 	fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-
+<script src="{{ asset('js/jquery-2.2.4.min.js') }}"></script>
+<script>
+        var offsetarticolo = 2;
+        $(document).on('click', '#load-more', function() {
+            $.get(
+                '{{ path('ajax_get_articolo_internal') }}',
+                { offsetarticolo: offsetarticolo },
+                function(data, status) {
+                    if(status == 'success') {
+                        if(!data) {
+                            $('#load-more').hide();
+                        }
+                        $('#articoli').append(data);
+                    }
+                    offsetarticolo += 2;
+                }
+            );
+        })
+    </script>
 
 {% endblock %}
