--- a/templates/site/categoriasite.html.twig
+++ b/templates/site/categoriasite.html.twig
@@ -5,10 +5,10 @@
 					 <section class="top-section-area section-gap">
 							 <div class="container">
 									 <div class="row justify-content-between align-items-center d-flex">
-											 <div class="col-lg-8 top-left">
+											 <div class="col-lg-12 top-left">
 													 <h1 class="text-white mb-20">{{categoria.nome|capitalize}}</h1>
 													 <ul>
-															 <li><a href="index.html">Home</a><span class="lnr lnr-arrow-right"></span></li>
+															 <li><a href="{{path('home')}}">Home</a><span class="lnr lnr-arrow-right"></span></li>
 															 <li><a href="category.html">{{categoria.nome|capitalize}}</a></li>
 													 </ul>
 											 </div>
@@ -50,34 +50,19 @@
 															 </div>
 													 </div>
 													 {% endfor %}
-													 <div class="justify-content-center d-flex">
-															 <a class="primary-btn pbtn-2 text-uppercase mx-auto mt-60" id="load-more">Load More </a>
-													 </div>
 									 </div>
 									 <div class="col-lg-4 sidebar-area">
 
 											 <div class="single_widget cat_widget">
-													 <h4 class="text-uppercase pb-20">post categories</h4>
-													 <ul>
-															 <li>
-																	 <a href="#">Itinerari <span>37</span></a>
-															 </li>
-															 <li>
-																	 <a href="#">Adventure <span>37</span></a>
-															 </li>
-															 <li>
-																	 <a href="#">Food <span>37</span></a>
-															 </li>
-															 <li>
-																	 <a href="#">Tecnologia <span>37</span></a>
-															 </li>
-															 <li>
-																	 <a href="#">Cultura <span>37</span></a>
-															 </li>
-															 <li>
-																	 <a href="#">Hobby <span>37</span></a>
-															 </li>
-													 </ul>
+													 <h4 class="text-uppercase pb-20">Nuovi articoli</h4>
+													 <ul id="articoli">
+														 {% for a in articoli %}
+														<a href="{{path('articolisite',{id: a.id})}}"><li class="grey">{{a.titolo}}</li></a>
+														{% endfor %}
+													</ul>
+													<ul>
+													<a class="primary-btn pbtn-2 text-uppercase mx-auto" id="load-more">Leggi di più</a>
+												</ul>
 											 </div>
 									 </div>
 							 </div>
@@ -86,21 +71,21 @@
 			 <!-- End post Area -->
 	 </div>
 	 <!-- End post Area -->
-<script src="{{ asset('js/jquery-2.2.4.min.js') }}"></script>
+	 <script src="{{ asset('js/jquery-2.2.4.min.js') }}"></script>
 <script>
-       var offsetcategoria = 1;
+       var offsetarticolo = 2;
        $(document).on('click', '#load-more', function() {
            $.get(
-               '{{ path('ajax_get_categoria') }}',
-               { offsetcategoria: offsetcategoria },
+               '{{ path('ajax_get_articolo_internal') }}',
+               { offsetarticolo: offsetarticolo },
                function(data, status) {
                    if(status == 'success') {
                        if(!data) {
                            $('#load-more').hide();
                        }
-                       $('#categoria').append(data);
+                       $('#articoli').append(data);
                    }
-                   offsetcategoria += 1;
+                   offsetarticolo += 2;
                }
            );
        })
