--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1113,7 +1113,7 @@ h6
     color: #222;
 }.section-gap
 {
-    padding: 80px;
+    padding: 40px;
 }.section-title
 {
     padding-bottom: 30px;
@@ -2199,6 +2199,9 @@ a.dropdown-item.light{
 }
 @media (max-width: 1000px)
 {
+  .single-list.flex-row.d-flex{
+    display: inline-block!important;
+  }
 .col-md-6.single-travel.media{
     max-width: 100%;
     padding-bottom: 10px;
