--- a/templates/admin/addarticoli.html.twig
+++ b/templates/admin/addarticoli.html.twig
@@ -42,6 +42,9 @@
                   {{ form_row(form.titolo, {'attr': {'class': 'form-control'}}) }}
               </div>
               <div class="form-group">
+                  {{ form_row(form.data, {'attr': {'class': 'form-control'}}) }}
+              </div>
+              <div class="form-group">
                   {{ form_row(form.tags, {'attr': {'class': 'form-control js-example-basic-multiple'}}) }}
               </div>
               <div class="form-group">
