--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -35,7 +35,7 @@
         <div class="form-check">
           {{ form_row(form.accetto, {'attr': {'class': 'form-check-label'}}) }}
         </div>
-        <p>asdasdasdasdasdasd</p>
+        <p>	Accetto i termini d'uso del servizio e dichiaro di aver letto l'informativa sul trattamento dei miei dati personali.</p>
         <div class="form-group hidden">
           {{ form_row(form.roles, {'attr': {'class': 'form-control'}}) }}
         </div>
