--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,10 +8,12 @@
         <link href="{{ asset('css/bootstrap.css') }}" rel="stylesheet">
         <link href="{{ asset('css/owl.carousel.css') }}" rel="stylesheet" >
         <link href="{{ asset('css/main.css') }}" rel="stylesheet">
+        <link href="{{ asset('css/jquery-eu-cookie-law-popup.css') }}" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
         {% endblock %}
     </head>
     <!-- Start Header Area -->
+    <body class="eupopup eupopup-top"></body>
 			<header class="default-header">
 				<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container">
@@ -38,6 +40,7 @@
                         <a class="dropdown-item"><a href="{{ path('logout') }}">Disconnetti</a>
                         {% else %}
                         <a class="dropdown-item"><a href="{{ path('login') }}">Accedi</a>
+                        <a class="dropdown-item"><a href="{{ path('register') }}">Iscriviti</a>
                       {% endif %}
                       {% if is_granted('ROLE_ADMIN') %}<a class="dropdown-item"><a href="{{ path('dashboard') }}">Dashboard</a>
 
@@ -79,5 +82,6 @@
         <script src="{{ asset('js/jquery.magnific-popup.min.js') }}"></script>
         <script src="{{ asset('js/jquery.sticky.js') }}"></script>
         <script src="{{ asset('js/main.js') }}"></script>
+        <script src="{{ asset('js/jquery-eu-cookie-law-popup.js') }}"></script>
         {% endblock %}
 </html>
