--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
-    <head>
+    {% block head %}
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+	      <meta name="viewport" content="width=device-width, initial-scale=1">
+	      <meta name="ga-site-verification" content="VaftIEX9Q1sidR4BlGTfO2YL" />
+        <link rel="shortcut icon" type="image/x-icon" href="{{ asset('favicon/favicon.ico') }}">
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('favicon/apple-touch-icon.png') }}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('favicon/favicon-32x32.png') }}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('favicon/favicon-16x16.png') }}">
+        <link rel="manifest" href="{{ asset('favicon/site.webmanifest') }}">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+    {% endblock %}
         {% block stylesheets %}
         <link href="{{ asset('css/linearicons.css') }}" rel="stylesheet" >
         <link href="{{ asset('css/font-awesome.min.css') }}" rel="stylesheet">
@@ -11,7 +21,6 @@
         <link href="{{ asset('css/jquery-eu-cookie-law-popup.css') }}" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
         {% endblock %}
-    </head>
     <!-- Start Header Area -->
     <body class="eupopup eupopup-top"></body>
 			<header class="default-header">
@@ -60,7 +69,7 @@
 
 					<div class="row d-flex justify-content-between">
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						<p class="col-lg-8 col-sm-12 footer-text">Copyright by Antonio Galdo</p>
+						<p class="col-lg-8 col-sm-12 footer-text">Un idea di Antonio Galdo P.iva:10225750966</p>
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						<div class="col-lg-4 col-sm-12 footer-social">
 							<a href="#"><i class="fa fa-facebook"></i></a>
