fixed grafic mobile

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
     {% block head %}
+    <html lang="zxx" class="no-js">
         <meta charset="UTF-8">
 	      <meta name="viewport" content="width=device-width, initial-scale=1">
 	      <meta name="ga-site-verification" content="VaftIEX9Q1sidR4BlGTfO2YL" />
