--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,7 +22,9 @@
 {font-weight: 300;
 
     color: #777;
-}body
+}
+body, html { overflow-x:hidden; }
+body
 {font-family: 'Poppins',sans-serif;font-size: 14px;font-weight: 300;line-height: 1.625em;position: relative;
 
     color: #777;
@@ -2249,6 +2251,9 @@ a.dropdown-item.light{
 }
   .menu-content {
     padding-bottom: 10px;
+}
+.justify-content-between{
+  padding-left: 5%;
 }
 }
 @media (max-width: 767px)
