--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -1,4 +1,6 @@
 {% block title %}{% endblock %}
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 {% block stylesheets %}
 <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
 <link href="{{ asset('css/font-awesome.min.css') }}" rel="stylesheet">
