--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,7 +73,7 @@
 						<p class="col-lg-8 col-sm-12 footer-text">Un idea di Antonio Galdo P.iva:10225750966</p>
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						<div class="col-lg-4 col-sm-12 footer-social">
-							<a href="#"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.facebook.com/Know-travel-674094836289413"><i class="fa fa-facebook"></i></a>
 							<a href="#"><i class="fa fa-instagram"></i></a>
 						</div>
 					</div>
